Fix overlapping labels

--- a/src/components/ArcadeButton/ArcadeButton.scss
+++ b/src/components/ArcadeButton/ArcadeButton.scss
@@ -1,11 +1,12 @@
 .button-wrapper {
   margin-bottom: 3rem;
+  padding: 0 0.5rem;
 }
 
 .dropzone {
   width: 10rem;
   height: 10rem;
-  padding: 1.5rem 3rem;
+  padding: 1.5rem 2.5rem;
 }
 
 .dropzone-accept {
